fixed the issue of overlapping images

--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,8 @@ button {
 }
 
 img{
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
     border-radius: 10px;
     
 }
